--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+    <!-- source: https://alligator.io/angular/custom-loading-screen/ -->
+    <app-root>
+        <div id="loading">
+            Loading<span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span>
+        </div>
+    </app-root>
 </body>
 </html>
