--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,11 @@
 <body>
     <!-- source: https://alligator.io/angular/custom-loading-screen/ -->
     <app-root>
-        <div id="loading">
-            Loading<span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span>
+        <div class="flex-container">
+            <div id="logo"><div>
+            <div id="loading">
+                Loading<span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span>
+            </div>
         </div>
     </app-root>
 </body>
